# willow-gate

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: HANDOFF.md  custody-ledger-spec.md  hardening-plan.md
scripts/: stance_eval.py
src/willow_gate/: __init__.py  custody.py  friction_floor.py  message_integrity.py
tests/: test_custody.py  test_friction_floor.py  test_message_integrity.py  test_stance_friction.py  test_willowgate.py
